--- a/metrics/m_factinternetsales_salesamount_sum.yml
+++ b/metrics/m_factinternetsales_salesamount_sum.yml
@@ -1,6 +1,6 @@
 unique_name: m_factinternetsales_salesamount_sum
 object_type: metric
-label: Sales Amount
+label: Sales Amounts
 calculation_method: sum
 column: salesamount
 dataset: factinternetsales
