--- a/models/second_model.yml
+++ b/models/second_model.yml
@@ -1,7 +1,8 @@
 unique_name: second_model
 object_type: model
 label: second_model
-dimensions: []
+dimensions:
+  - Sales_Reasons
 metrics:
   - unique_name: m_factinternetsales_salesamount_sum
 relationships:
